syntax = "proto3";
package IM.Login;
import "IM.BaseDefine.proto";

option optimize_for = LITE_RUNTIME;

message IMLoginReq{
	//cmd id:		0x0103
	string user_name = 1;
	string password = 2;
	IM.BaseDefine.UserStatType online_status = 3;
	IM.BaseDefine.ClientType client_type = 4;
	string client_version = 5;
	string client = 6;
	string tails = 7;
}
